p2ws_package/Devpp2ws-Package/objects/Case_Group_Member__c.object
<CustomObject>
    <fields>
        <fullName>ATA_Chapter_F__c</fullName>
        <description>Display the 2 digits in front of ATA chapter</description>
        <formula>LEFT(  ATA_Chapter__c  , 2)</formula>
        <label>ATA Chapter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATA_Chapter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ATA Chapter</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Master_Map__c.Depend_On_Object__c</field>
                <operation>equals</operation>
                <valueField>$Source.Equipment__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Case Group Members (ATA Chapter)</relationshipLabel>
        <relationshipName>Case_Group_Members2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>A_C_Zone__c</fullName>
        <label>A/C Zone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accepted_Class__c</fullName>
        <description>Displays the accepted class of the case group member</description>
        <formula>Passengerid__r.Class__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accepted Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accepted_Seat_Number__c</fullName>
        <description>Displays the accepted seat of the case group member</description>
        <formula>Passengerid__r.Checkin_Seat__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accepted Seat Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Displays the account related to the case group member</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Case Group Members</relationshipLabel>
        <relationshipName>Case_Group_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Status__c</fullName>
        <formula>TEXT(Caseid__r.Action__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aircraft__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Displays the aircraft the position is related to</description>
        <label>A/C REG</label>
        <referenceTo>Aircraft__c</referenceTo>
        <relationshipLabel>Case Group Members</relationshipLabel>
        <relationshipName>Case_Group_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorize_Number__c</fullName>
        <description>Displays the authorization number of the personnel who logged the case</description>
        <formula>Caseid__r.Authorize_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AUTH NO.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block_Name__c</fullName>
        <description>Displays the block name of the personnel who logged the case</description>
        <formula>Caseid__r.Block_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Block Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Created_Date__c</fullName>
        <formula>Caseid__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date/Time Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Number_F__c</fullName>
        <formula>IF( $User.UIThemeDisplayed == &apos;Theme4t&apos;, HYPERLINK(&quot;/&quot; &amp; Caseid__r.Id, CreatedBy.Station__c &amp; CreatedBy.Department &amp;    Caseid__r.CaseNumber ), HYPERLINK(&quot;javascript:srcUp(&apos;/&quot; &amp;  Caseid__r.Id  &amp; &quot;&apos;)&quot;, CreatedBy.Station__c &amp; CreatedBy.Department &amp;    Caseid__r.CaseNumber   ))</formula>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Origin__c</fullName>
        <formula>TEXT( Caseid__r.Origin )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Priority__c</fullName>
        <formula>TEXT(  Caseid__r.Priority )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <formula>TEXT(  Caseid__r.Case_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caseid__c</fullName>
        <description>Displays the case that the case group member is related to</description>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Group Members</relationshipLabel>
        <relationshipName>Case_Group_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Change_Cabin_Class_Full_Name__c</fullName>
        <description>Displays the full name of changed cabin class of case group member</description>
        <formula>CASE( Change_Cabin_Class__c , &quot;F&quot;, &quot;First&quot;, &quot;C&quot;, &quot;Business&quot;, &quot;Y&quot;, &quot;Economy&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Cabin Class Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Cabin_Class__c</fullName>
        <description>Displays the changed cabin class of case group member</description>
        <label>Change Cabin Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Seat__c</fullName>
        <description>Displays the new seat for the case group member</description>
        <label>Change Seat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complain_TXT__c</fullName>
        <description>Displays the part, equipment and defect condition for the case that the case group member is related to</description>
        <formula>Caseid__r.Complaint_TXT_40__c</formula>
        <label>Complain TXT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_At_Mobile__c</fullName>
        <label>Created At (Mobile)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CrewId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Crew</label>
        <referenceTo>Crew__c</referenceTo>
        <relationshipLabel>Case Group Members</relationshipLabel>
        <relationshipName>Case_Group_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Defect_Type__c</fullName>
        <description>Displays the defect type from the case that the case group member is related to</description>
        <label>Defect Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Version__c</fullName>
        <label>Document_Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_From_Case__c</fullName>
        <description>Displays the equipment from the case that the case group member is related to</description>
        <formula>Caseid__r.EquipmentId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Equipment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Displays the value of the equipment the case group member is related to</description>
        <label>Equipment</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Case Group Members</relationshipLabel>
        <relationshipName>Case_Group_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FFP_Number_F__c</fullName>
        <formula>Passengerid__r.FFP_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FFP Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FFP_Number__c</fullName>
        <label>FFP Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FFP_Tier_F__c</fullName>
        <formula>Passengerid__r.FFP_Tier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FFP Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FFP_Tier__c</fullName>
        <label>FFP Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlightId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Flight Number</label>
        <referenceTo>Flight__c</referenceTo>
        <relationshipLabel>Case Group Members</relationshipLabel>
        <relationshipName>Case_Group_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flight_Number_F__c</fullName>
        <formula>HYPERLINK(&quot;javascript:srcUp(&apos;/&quot; &amp;   Caseid__r.Flightid__c   &amp; &quot;&apos;)&quot;,   Caseid__r.Flightid__r.Name  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flight Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impact_F__c</fullName>
        <formula>TEXT( Impact__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Impact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impact_Status_Color__c</fullName>
        <formula>IF(  ISPICKVAL( Caseid__r.Action__c, &quot;&quot; ) &amp;&amp;   ISPICKVAL(  Impact__c, &quot;&quot; )  , IMAGE(&quot;/resource/YellowCase&quot;,&quot;&quot;,20,20) + &apos; &apos;,
        
      IF(  ISPICKVAL( Caseid__r.Action__c , &quot;Remain&quot;) &amp;&amp; ISPICKVAL (  Impact__c , &quot;Block&quot;)  , IMAGE(&quot;/resource/RedCase&quot;,&quot;&quot;,20,20) + &apos; &apos;, 

                   IF( ISPICKVAL( Caseid__r.Action__c , &quot;Remain&quot;) &amp;&amp; ISPICKVAL (  Impact__c , &quot;Malfunction&quot;) , IMAGE(&quot;/resource/OrangeCase&quot;,&quot;&quot;,20,20) + &apos; &apos;,

                                IF( ISPICKVAL( Caseid__r.Action__c , &quot;Remain&quot;) &amp;&amp; ISPICKVAL (  Impact__c , &quot;Serviceable&quot;), IMAGE(&quot;/resource/BlueCase&quot;,&quot;&quot;,20,20) + &apos; &apos;,

                                      IF ( ISPICKVAL (  Impact__c , &quot;Complete&quot;) , IMAGE(&quot;/resource/GreenCase&quot;,&quot;&quot;,20,20) + &apos; &apos;,&quot;&quot;)
)
)
)
)</formula>
        <label>Impact Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Serviceable</fullName>
                </value>
                <value>
                    <fullName>Malfunction</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Case_Recode_Type_Id__c</fullName>
        <formula>Caseid__r.RecordTypeId</formula>
        <label>Master Case Recode Type Id (Clarify)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Travel_Class__c</fullName>
        <description>New travel class of a passenger when an incident occurs during a flight</description>
        <label>New Travel Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PNR__c</fullName>
        <label>PNR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_From_Case__c</fullName>
        <formula>Caseid__r.PartId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Displays the part the case group member is related to</description>
        <label>Part</label>
        <referenceTo>Master_Map__c</referenceTo>
        <relationshipLabel>Case Group Members (Part)</relationshipLabel>
        <relationshipName>Case_Group_Members1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Passenger_Class_Search__c</fullName>
        <description>Displays the passenger class as a text to enable global search indexing</description>
        <label>Passenger Class Search</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passenger_Name_Search__c</fullName>
        <description>Displays the passenger name as a text to enable global search indexing</description>
        <label>Passenger Name Search</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passenger_Seat_Search__c</fullName>
        <description>Displays the passenger seat as a text to enable global search indexing</description>
        <label>Passenger Seat Search</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passengerid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Displays the passenger the case group member is related to</description>
        <label>Passenger</label>
        <referenceTo>Passenger__c</referenceTo>
        <relationshipLabel>Case Group Members</relationshipLabel>
        <relationshipName>Case_Group_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position_Alphabet_Only__c</fullName>
        <formula>RIGHT(Position__c, 1)</formula>
        <label>Position Alphabet Only</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Number_Only__c</fullName>
        <formula>VALUE(LEFT( Position__c, LEN(Position__c) - 1 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position Number Only</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_with_condition_F__c</fullName>
        <formula>Seat_Number__c + &apos;-&apos; + Caseid__r.PartId__r.Name  + &apos;-&apos; +  Defect_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seat Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROP_Tier__c</fullName>
        <formula>Passengerid__r.AccountId__r.ROP_Tier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ROP Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requires_Fix__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox = true means that the equipment requires fixing. Checkbox = false means that the equipment does not have a defect but is affected by another equipment.</description>
        <label>Requires Fix</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEQ_No_F__c</fullName>
        <formula>HYPERLINK(&quot;javascript:srcUp(&apos;/&quot; &amp; Caseid__c &amp; &quot;&apos;)&quot;,  Caseid__r.SEQ_No_Display__c  , &quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SEQ No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seat_Number__c</fullName>
        <formula>Position__c</formula>
        <label>Seat Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Name__c</fullName>
        <description>Displays the sequence number from the case the case group member is related to</description>
        <label>Staff Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Personal_Number__c</fullName>
        <label>Staff Personal Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT( Caseid__r.Status )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <formula>Caseid__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_Class__c</fullName>
        <label>Travel Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <label>Case Group Member</label>
    <nameField>
        <displayFormat>CGM-{0000000000}</displayFormat>
        <label>Case Group Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Group Members</pluralLabel>
    <recordTypes>
        <fullName>Ground_Service_CGM</fullName>
        <active>true</active>
        <label>Ground Service CGM</label>
    </recordTypes>
    <recordTypes>
        <fullName>Maintenance_Page_Layout</fullName>
        <active>true</active>
        <label>Maintenance Page Layout</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>